done story part

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,12 +148,12 @@ header,
   .card1 {
     display: flex;
     flex-direction: column;
-    /* background: linear-gradient(
+    background: linear-gradient(
         180deg,
         rgb(222, 245, 255),
         rgba(255, 255, 255, 0) 40%
       ),
-      rgb(255, 255, 255); */
+      rgb(255, 255, 255); 
     padding: 60px 30px;
     border-radius: 18.86px;
     justify-content: center;
@@ -214,6 +214,141 @@ header,
   .readmore3 {
     color: rgb(135, 0, 255);
   }
+
+
+
+  /* Our stories? */
+
+  .stories {
+    background: url("../assets/bg.png"),
+      linear-gradient(0deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+  }
+  
+  .story-container > h2 {
+    padding-top: 60px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 46px;
+    font-weight: 700;
+  }
+  
+  .all-story {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    margin-top: 80px;
+    padding-bottom: 80px;
+    gap: 40px;
+  }
+  
+  .story-card {
+    border-radius: 16px;
+    overflow: hidden;
+    background-color: white;
+  }
+  
+  .story-details {
+    margin: 34px;
+    display: flex;
+    flex-direction: column;
+    gap: 52px;
+  }
+  
+  .text3 {
+    color: rgb(102, 102, 102);
+    font-size: 15.34px;
+    font-weight: 500;
+  }
+  
+  .story-card > button {
+    border-radius: 47.93px;
+    background: rgb(60, 216, 232);
+    margin-left: 34px;
+    border: none;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: -150px;
+    color: white;
+  }
+  
+  .date {
+    margin-left: 34px;
+    border-radius: 47.93px;
+    background: rgb(60, 216, 232);
+    padding: 15px;
+    width: 250px;
+    text-align: center;
+    margin-top: -30px;
+    position: relative;
+    color: white;
+    z-index: 3;
+  }
+  
+  .story-card > img {
+    position: relative;
+  }
+  
+  .multi-story {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+  }
+  
+  .card22 {
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    overflow: hidden;
+  }
+  
+  .card22 > img{
+      position: relative;
+  }
+  
+  .text4{
+      margin: 34px;
+      font-size: 15px;
+  font-weight: 500;
+  }
+  
+  
+  
+  .date2{
+      border-radius: 47.93px;
+  background: rgb(149, 178, 38);
+      width: 200px;
+      padding: 15px;
+      color: white;
+      position: relative;
+      z-index: 4;
+      margin-left: 34px;
+      margin-top: -32px;
+  }
+  
+  .date-blue{
+    background: rgb(93, 88, 240);
+  }
+  
+  .btn-view-container{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+  }
+  
+  .btn-view-container button{
+    border-radius: 12px;
+  background: rgb(17, 17, 17);
+    padding: 10px 30px;
+    border: 2px solid black;
+    color: white;
+    font-size: 20px;
+  font-weight: 700;
+  }
+  
+  
+
+
+
 
 
   
